assets/css/style.css
body{
    font-family: 'Comfortaa', cursive;
    background: linear-gradient(cyan, yellow);
    background-size: 100vw 100vh;
}
header{
    text-align: center;
    box-sizing: border-box;
    padding: 1.5vh 0;
    margin: 4vh auto 2vh auto;
}
h1{
    font-size: 3.5rem;
}
.question{
    font-size: 1.9rem;
    width: 100%;
    height: auto;
    text-align: center;
    margin: 2vh auto;
}
#triviaQuestion{
    text-align: center;
    height: auto;
    margin: 1vh auto;
    display: block;
    word-wrap: break-word;
}
.placeholder{
    width: 100%;
    height: fit-content;
    margin: 1vh;
    box-sizing: border-box;
    padding: 0 auto;
    justify-content: center;
}
.start{
    width: 50%;
    font-size: 1.8rem;
    height: fit-content;
    text-align: center;
}
.trivia{
    margin: 2vh auto;
}
li{
    font-style: bold;
    font-size: 1.8rem;
    letter-spacing: .75vw;
}
.answer{
    width: 95%;
    height: 6vh;
    font-size: 1.8rem;
}
.infoPanel{
    margin: 2vh auto;
}
.timer{
    width: 100%;
    margin: 1vh auto;
    text-align: center;
}
#timerHeader{
    width: 100%;
    font-size: 2rem;
    text-align: center;
}
#stats{
    font-size: 1.8rem;
    margin: 1vh auto;
}
h5{
    text-align: center;
    margin: 1vh auto;
}
.footer{
    position: absolute;
    bottom: 0;
    left: 40%;
}
#honorableMention{
    font-size: 1.5rem;
}

